namespaces/live.cloud-platform.service.justice.gov.uk/laa-crime-court-message-processor-test/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "laa-crime-court-message-processor-test"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "test"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "laa-crime-assess-apps-teamchat"
    cloud-platform.justice.gov.uk/application: "crime-court-message-processor"
    cloud-platform.justice.gov.uk/owner: "LAA Crime Assess: laacrimeapps@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-crime-court-message-processor"
    cloud-platform.justice.gov.uk/team-name: "laa-crime-apps-team"
    cloud-platform.justice.gov.uk/review-after: ""
